refactored ReportsUtils: - bug fix, using ConcurrentHashMap - removed hardcoded, unneeded classpath - promoting code reusage through new methods (export, createXpto)